Update transcript search and audio

--- a/src/components/Search.astro
+++ b/src/components/Search.astro
@@ -12,7 +12,7 @@
   <kbd class="search-trigger-kbd">/</kbd>
 </button>
 
-<script src="../scripts/search.ts"></script>
+<script src="../scripts/search-entry.ts"></script>
 
 
 <style>
